Serialize messages using boost
Update the output/input sequence operators to use boost serialization
library to serialize and deserialize messages to be sent in the socket.

Signed-off-by: José Guilherme Vanz <jvanz@jvanz.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
 SET(Boost_USE_STATIC_LIBS OFF)
 SET(Boost_USE_MULTITHREAD ON)
-find_package(Boost 1.66.0 REQUIRED COMPONENTS system regex thread)
+find_package(Boost 1.66.0 REQUIRED COMPONENTS system regex thread serialization)
 find_path(Boost_INCLUDE_DIR boost)
 include_directories(${Boost_INCLUDE_DIR} ./src/)
 
